[gd_scene load_steps=8 format=3 uid="uid://bhsy5m6kifgl3"]

[ext_resource type="PackedScene" uid="uid://c020nwuhxw7kw" path="res://core/recipe/recipe_info.tscn" id="1_5pr6b"]
[ext_resource type="Script" path="res://scenes/entities/npc/kitchen/info/kitchen_recipe_info.gd" id="2_jqxur"]
[ext_resource type="Resource" uid="uid://b7tdj35yq1wur" path="res://scenes/inventory/db/hotbar.tres" id="3_feb0r"]
[ext_resource type="PackedScene" uid="uid://ckmbf7xea4x1t" path="res://scenes/ui/item.tscn" id="4_ovyay"]
[ext_resource type="FontFile" uid="uid://61ntd2mdvlrp" path="res://fonts/PixgamerRegular-OVD6A.ttf" id="5_xagyk"]

[sub_resource type="LabelSettings" id="LabelSettings_840xk"]
font = ExtResource("5_xagyk")

[sub_resource type="LabelSettings" id="LabelSettings_qai6m"]
font = ExtResource("5_xagyk")

[node name="RecipeInfo" instance=ExtResource("1_5pr6b")]
script = ExtResource("2_jqxur")
hotbar_db = ExtResource("3_feb0r")

[node name="Label" parent="." index="0"]
text = "Nguyên liệu để nấu món"

[node name="Item" parent="." index="1" instance=ExtResource("4_ovyay")]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="." index="2"]
layout_mode = 2
label_settings = SubResource("LabelSettings_840xk")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="." index="3"]
layout_mode = 2
text = "Nguyên liệu để hoàn thành món này"
label_settings = SubResource("LabelSettings_qai6m")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="." index="5"]
layout_mode = 2
theme_override_constants/separation = 21
alignment = 1

[node name="Control2" type="Control" parent="HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="CancelButton" type="Button" parent="HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_xagyk")
text = " Huỷ"
icon_alignment = 1

[node name="StartButton" type="Button" parent="HBoxContainer" index="2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Bắt đầu"

[node name="Control" type="Control" parent="HBoxContainer" index="3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[connection signal="pressed" from="HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
